syntax = "proto3";
package DomainServices.DocumentOnSAService.RefreshElectronicDocument;
option csharp_namespace = "DomainServices.DocumentOnSAService.Contracts";

message RefreshElectronicDocumentRequest {
	
	int32 DocumentOnSAId = 1;
}